--- a/views/login/login.html
+++ b/views/login/login.html
@@ -7,6 +7,7 @@
     <!-- Content Security Policy -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com">
     <title>Iniciar Sesión</title>
+    <link rel="icon" href="../../public/assets/img/logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="../../public/CSS/login-css/login-style.css" rel="stylesheet">
