--- a/public/CSS/dashboard-css/dashboard.css
+++ b/public/CSS/dashboard-css/dashboard.css
@@ -141,7 +141,7 @@ header {
     font-weight: bold;
 }
 
-.add-product-btn {
+.add-product-btn, .add-user-btn {
     background-color: var(--secondary-color);
     color: var(--background-color);
     border: none;
@@ -202,7 +202,7 @@ th {
     align-items: center;
 }
 
-.pagination button {
+.pagination button, .close-btn {
     background-color: var(--primary-color);
     color: var(--background-color);
     border: none;
