Terminando proceso de edición de usuario

--- a/views/usuarios/usuarios-admin.html
+++ b/views/usuarios/usuarios-admin.html
@@ -49,6 +49,8 @@
         <span class="close" onclick="cerrarModal()">&times;</span>
         <h2>Editar Usuario</h2>
         <form id="editarUsuarioForm" class="editar-usuario-form">
+            <input type="hidden" id="idUsuario">
+
             <label for="nombreUsuario">Nombre de Usuario:</label>
             <input type="text" id="nombreUsuario" name="nombreUsuario" required>
 
