--- a/views/usuarios/usuarios-admin.html
+++ b/views/usuarios/usuarios-admin.html
@@ -1,6 +1,6 @@
 <div class="content-header">
     <h1 class="content-title">Administrar Usuarios</h1>
-    <button class="add-user-btn" title="Agregar Nuevo Usuario">
+    <button class="add-user-btn" title="Agregar Nuevo Usuario" onclick="agregarUsuario()">
         <span class="material-icons">person_add</span>
     </button>
 </div>
@@ -47,7 +47,7 @@
 <div id="editarUsuarioModal" class="modal">
     <div class="modal-content">
         <span class="close" onclick="cerrarModal()">&times;</span>
-        <h2>Editar Usuario</h2>
+        <h2 id="modalTitle"></h2>
         <form id="editarUsuarioForm" class="editar-usuario-form">
             <input type="hidden" id="idUsuario">
 
@@ -83,7 +83,7 @@
                 <!-- Opciones de roles se llenarán aquí -->
             </select>
 
-            <button type="button" onclick="enviarEdicionUsuario()">Guardar Cambios</button>
+            <button type="button" id="buttonModal">Guardar Cambios</button>
         </form>
     </div>
 </div>
