--- a/views/usuarios/usuarios-admin.html
+++ b/views/usuarios/usuarios-admin.html
@@ -53,7 +53,6 @@
 
             <label style="display: none;" id="colaboradorSelectLabel" for="colaboradorName">Colaborador:</label>
             <select style="display: none;" id="colaboradorName" name="colaboradorName" required>
-                <option value="">Seleccione un colaborador</option>
                 <!-- Opciones de roles se llenarán aquí -->
             </select>
 
@@ -89,7 +88,7 @@
                 <!-- Opciones de roles se llenarán aquí -->
             </select>
 
-            <button type="button" id="buttonModal">Guardar Cambios</button>
+            <button class="close-btn" type="button" id="buttonModal">Guardar Cambios</button>
         </form>
     </div>
 </div>
