--- a/views/usuarios/usuarios-admin.html
+++ b/views/usuarios/usuarios-admin.html
@@ -13,11 +13,8 @@
         <option>25 por página</option>
         <option>50 por página</option>
     </select>
-    <select>
+    <select id="filtrado-role">
         <option value="">Filtrar por tipo</option>
-        <option value="admin">Administrador</option>
-        <option value="user">Usuario</option>
-        <option value="guest">Invitado</option>
     </select>
     <button class="close-btn" style="float: right;" onclick="limpiarDIV()">Cerrar</button>
 </div>
@@ -85,7 +82,6 @@
 
             <label for="roleName">Rol:</label>
             <select id="roleName" name="roleName" required>
-                <option value="">Seleccione un rol</option>
                 <!-- Opciones de roles se llenarán aquí -->
             </select>
 
@@ -93,7 +89,6 @@
         </form>
     </div>
 </div>
-
 
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
