--- a/views/usuarios/usuarios-admin.html
+++ b/views/usuarios/usuarios-admin.html
@@ -50,6 +50,7 @@
 
             <label style="display: none;" id="colaboradorSelectLabel" for="colaboradorName">Colaborador:</label>
             <select style="display: none;" id="colaboradorName" name="colaboradorName" required>
+                <option value="">Seleccione un colaborador</option>
                 <!-- Opciones de roles se llenarán aquí -->
             </select>
 
@@ -84,7 +85,7 @@
                 <!-- Opciones de roles se llenarán aquí -->
             </select>
 
-            <button class="close-btn" type="button" id="buttonModal">Guardar Cambios</button>
+            <button type="button" id="buttonModal">Guardar Cambios</button>
         </form>
     </div>
 </div>
