Reapply "Merge branch 'main' into Adam"
This reverts commit 3bd7446e88d0458f661b7229accec001993bed80.

--- a/views/usuarios/usuarios-admin.html
+++ b/views/usuarios/usuarios-admin.html
@@ -50,7 +50,6 @@
 
             <label style="display: none;" id="colaboradorSelectLabel" for="colaboradorName">Colaborador:</label>
             <select style="display: none;" id="colaboradorName" name="colaboradorName" required>
-                <option value="">Seleccione un colaborador</option>
                 <!-- Opciones de roles se llenarán aquí -->
             </select>
 
@@ -85,7 +84,7 @@
                 <!-- Opciones de roles se llenarán aquí -->
             </select>
 
-            <button type="button" id="buttonModal">Guardar Cambios</button>
+            <button class="close-btn" type="button" id="buttonModal">Guardar Cambios</button>
         </form>
     </div>
 </div>
