Módulo de usuarios completado.

--- a/views/usuarios/usuarios-admin.html
+++ b/views/usuarios/usuarios-admin.html
@@ -27,7 +27,7 @@
     </select>
     <button class="close-btn" style="float: right;" onclick="limpiarDIV()">Cerrar</button>
 </div>
-<table>
+<table id="tablaUsuarios">
     <thead>
         <tr>
             <th>Nombre</th>
@@ -41,9 +41,9 @@
 
     </tbody>
 </table>
-    <div class="pagination">
-        
-    </div>
+<div class="pagination">
+
+</div>
 </div>
 <!-- Modal para editar usuario -->
 <div id="editarUsuarioModal" class="modal">
