--- a/views/dashboard/dashboard.html
+++ b/views/dashboard/dashboard.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="submenu" id="more-options">
                     <button class="menu-item more-option-buttons">Perfil</button>
-                    <button class="menu-item more-option-buttons" onclick="adjuntarHTML('/configuration-panel/configuration-panel.html', null)">Configuración</button>
+                    <button class="menu-item more-option-buttons" onclick="adjuntarHTML('/configuration-panel/configuration-panel.html', 0)">Configuración</button>
                     <button class="menu-item more-option-buttons" onclick="logout()">Cerrar Sesión</button>
                 </div>
             </div>
