--- a/views/configuration-panel/configuration-panel.html
+++ b/views/configuration-panel/configuration-panel.html
@@ -11,7 +11,7 @@
         </div>
         <div class="config-card">
             <span class="material-icons config-icon">groups</span>
-            <h2 class="config-title" onclick="adjuntarHTML('/configuration-panel/manage-collaborators.html', null)">Administrar empleados</h2>
+            <h2 class="config-title" onclick="adjuntarHTML('/configuration-panel/manage-collaborators.html', () => cargarColaboradoresTabla())">Administrar empleados</h2>
             <p class="config-description">Gestiona la información y los registros de los empleados.</p>
         </div>
         <div class="config-card">
