--- a/public/CSS/dashboard-css/dashboard.css
+++ b/public/CSS/dashboard-css/dashboard.css
@@ -302,7 +302,7 @@ form {
     gap: 10px; /* Espaciado entre los inputs */
 }
 
-input[type="text"], input[type="password"] {
+input[type="text"], input[type="password"], input[type="tel"], input[type="date"], input[type="email"]{
     padding: 10px;
     border: 2px solid #ccc; /* Color de borde inicial */
     border-radius: 5px; /* Bordes redondeados para los inputs */
@@ -310,7 +310,7 @@ input[type="text"], input[type="password"] {
     width: 100%; /* Asegura que el input siempre use el 100% del espacio disponible */
 }
 
-input[type="text"]:focus, input[type="password"]:focus {
+input[type="text"]:focus, input[type="password"]:focus, input[type="tel"]:focus, input[type="date"]:focus, input[type="email"]:focus {
     border-color: #8a2be2; /* Color de borde al hacer clic */
     outline: none; /* Quitar el contorno */
 }
