--- a/views/usuarios/usuarios-admin.html
+++ b/views/usuarios/usuarios-admin.html
@@ -48,7 +48,7 @@
 <!-- Modal para editar usuario -->
 <div id="editarUsuarioModal" class="modal">
     <div class="modal-content">
-        <span class="close" onclick="cerrarModal('editarUsuarioModal')">&times;</span>
+        <span class="close" onclick="cerrarModal('editarUsuarioModal', 'editarUsuarioForm')">&times;</span>
         <h2 id="modalTitle"></h2>
         <form id="editarUsuarioForm" class="editar-usuario-form">
             <input type="hidden" id="idUsuario">
