--- a/public/CSS/dashboard-css/dashboard.css
+++ b/public/CSS/dashboard-css/dashboard.css
@@ -141,7 +141,7 @@ header {
     font-weight: bold;
 }
 
-.add-product-btn, .add-user-btn {
+.add-product-btn, .add-user-btn, .add-supplier-btn {
     background-color: var(--secondary-color);
     color: var(--background-color);
     border: none;
@@ -154,7 +154,7 @@ header {
     justify-content: center;
 }
 
-.add-product-btn:hover {
+.add-product-btn:hover, .add-supplier-btn:hover, .add-user-btn:hover {
     background-color: #7a1bd2;
 }
 
