avance en backend de proveedores

--- a/views/configuration-panel/configuration-panel.html
+++ b/views/configuration-panel/configuration-panel.html
@@ -31,7 +31,7 @@
         </div>
         <div class="config-card">
             <span class="material-icons config-icon">local_shipping</span>
-            <h2 class="config-title">Administrar proveedores</h2>
+            <h2 class="config-title" onclick="adjuntarHTML('/configuration-panel/manage-proveedores.html', () => cargarProveedoresTabla())">Administrar proveedores</h2>
             <p class="config-description">Gestiona la información y los registros de los proveedores.</p>
         </div>
         <div class="config-card">
