Listado sencillo sin acciones ni filtros completo, únicamente por estado activo

--- a/views/configuration-panel/configuration-panel.html
+++ b/views/configuration-panel/configuration-panel.html
@@ -29,9 +29,9 @@
             <h2 class="config-title">Administrar categorías de productos</h2>
             <p class="config-description">Configura y organiza las categorías de los productos.</p>
         </div>
-        <div onclick="adjuntarHTML('/configuration-panel/proveedores-admin.html', 0)" class="config-card"> <!--a la función del onclick le pase 0, para probar que el HTML si se adunta, pero se le tiene que pasar el nombre de la función que carga los proveedores en la tabla-->
+        <div onclick="adjuntarHTML('/configuration-panel/proveedores-admin.html', () => cargarProveedoresTabla())" class="config-card"> <!--a la función del onclick le pase 0, para probar que el HTML si se adunta, pero se le tiene que pasar el nombre de la función que carga los proveedores en la tabla-->
             <span class="material-icons config-icon">local_shipping</span>
-            <h2 class="config-title" onclick="adjuntarHTML('/configuration-panel/manage-proveedores.html', () => cargarProveedoresTabla())">Administrar proveedores</h2>
+            <h2 class="config-title">Administrar proveedores</h2>
             <p class="config-description">Gestiona la información y los registros de los proveedores.</p>
         </div>
         <div class="config-card">
