--- a/views/configuration-panel/proveedores-admin.html
+++ b/views/configuration-panel/proveedores-admin.html
@@ -1,21 +1,22 @@
+<link rel="stylesheet" href="../../public/CSS/dashboard-css/dashboard.css">
 <div class="main-content">
     <div class="content-header">
         <h1 class="content-title">Administrar Proveedores</h1>
-        <button class="add-supplier-btn" title="Agregar Nuevo Proveedor">
+        <button onclick="agregarProveedor()" class="add-proveedor-btn" title="Agregar Nuevo Proveedor">
             <span class="material-icons">add_business</span>
         </button>
     </div>
     <div class="search-bar">
-        <input id="search-bar" type="text" placeholder="Buscar colaboradores..." onkeypress="filterTable(3)"> <!--debe de ir 3 porque espara el modulo de proveedores, tiene que modificar la función para que llame al método de cargar proveedores cuando reciba ese 3-->
+        <input id="search-bar" type="text" placeholder="Buscar colaboradores..." onclick="filterTable(3)"> <!--debe de ir 3 porque espara el modulo de proveedores, tiene que modificar la función para que llame al método de cargar proveedores cuando reciba ese 3-->
     </div>
     <div class="filters">
-        <select onchange="filterTable(3)">
+        <select id="selectPageSize" onchange="filterTable(3)">
             <option value="5">5 por página</option>
             <option value="10">10 por página</option>
             <option value="25">25 por página</option>
             <option value="50">50 por página</option>
         </select>
-        <select onchange="filterTable(3)">
+        <select id="estado-filtro" onchange="filterTable(3)">
             <option value="2">Filtrar por estado</option>
             <option value="1">Activo</option>
             <option value="0">Inactivo</option>
@@ -34,5 +35,37 @@
 
         </tbody>
     </table>
+    <div id="pagination">
+        
+    </div>
+
+    <div id="editarProveedorModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="cerrarModal('editarProveedorModal', 'editarProveedorForm')">&times;</span>
+            <h2 id="modalTitle"></h2>
+            <form id="editarProveedorForm" class="editar-proveedor-form">
+                <input type="hidden" id="idProveedor">
+
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required>
+
+                <label for="provincia">Provincia:</label>
+                <select id="provincia" name="provincia" required>
+                </select>
+
+                <label for="canton">Canton:</label>
+                <select id="canton" name="canton" required>
+                </select>
+
+                <label for="distrito">Distrito:</label>
+                <select id="distrito" name="distrito" required>
+                </select>
+
+                <p id="errorMessage" style="color: red;"></p>
+
+                <button type="button" class="close-btn" id="buttonModal">Guardar Cambios</button>
+            </form>
+        </div>
+    </div>
 </div>
 </div>
