CRUD completo del modulo proveedor

--- a/views/configuration-panel/proveedores-admin.html
+++ b/views/configuration-panel/proveedores-admin.html
@@ -47,20 +47,20 @@
             <form id="editarProveedorForm" class="editar-proveedor-form">
                 <input type="hidden" id="idProveedor">
 
-                <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" name="nombre" required>
+                <label for="nombreProveedor">Nombre:</label>
+                <input type="text" id="nombreProveedor" name="nombreProveedor">
 
                 <label for="provincia">Provincia:</label>
-                <select id="provincia" name="provincia" required>
-                </select>
+                <input type="text" id="provincia" name="provincia" required>
 
                 <label for="canton">Canton:</label>
-                <select id="canton" name="canton" required>
-                </select>
+                <input type="text" id="canton" name="canton" required>
 
                 <label for="distrito">Distrito:</label>
-                <select id="distrito" name="distrito" required>
-                </select>
+                <input type="text" id="distrito" name="distrito" required>
+                
+                <label for="direccion">Direccion:</label>
+                <input type="text" id="direccion" name="direccion" required>
 
                 <p id="errorMessage" style="color: red;"></p>
 
